--- a/public/landers_page.html
+++ b/public/landers_page.html
@@ -109,25 +109,25 @@
             <li class="sidebar-label pt20">Menu</li>
             <li>
               <a href="pages_calendar.html">
-                <span class="fa fa-calendar"></span>
+                <img style="margin-left: 15px; width: 20px" src="/assets/img/logos/domains_icon_white.png"/>
                 <span class="sidebar-title">Domains</span>
               </a>
             </li>
             <li>
               <a href="../README/index.html">
-                <span class="glyphicon glyphicon-book"></span>
-                <span class="sidebar-title">Campaigns</span>
+                <span style="font-size: 18px" class="fa fa-crosshairs"></span>
+                <span  class="sidebar-title">Campaigns</span>
               </a>
             </li>
             <li class="active">
               <a href="dashboard.html">
-                <span class="glyphicon glyphicon-home"></span>
+                <img style="margin-left: 15px; width: 20px" src="/assets/img/logos/landers_icon_white.png"/>
                 <span class="sidebar-title">Landers</span>
               </a>
             </li>
             <li>
               <a href="pages_calendar.html">
-                <span class="fa fa-calendar"></span>
+                <span style="font-size: 18px" class="fa fa-bolt"></span>
                 <span class="sidebar-title">Performance</span>
               </a>
             </li>
@@ -220,7 +220,7 @@
                     Extreme Muscle Lander 2 
                  
                   <div class="widget-menu domain-campaign-notification">
-                     <span class="fs11 text-muted" title="Currently deployed on 2 domains"><i class="fa fa-circle text-alert fs12 pr5"></i> 2 Domains</span>
+                     <span class="fs11 text-muted" title="Currently deployed on 2 domains"><img style="width: 20px" src="/assets/img/logos/domains_icon_purple.png"/> 2 Domains</span>
                    <!--  <span class="fs11 text-muted ml10" title="Currently in 2 campaigns"><i class="fa fa-circle text-system fs12 pr5"></i> 2 Campaigns</span> -->
                   </div>
                    </a>
@@ -326,7 +326,7 @@
                     Weight Loss Lander version 1
                  
                   <div class="widget-menu domain-campaign-notification">
-                    <span class="fs11 text-muted" title="Currently deployed on 0 domains"><i class="fa fa-circle text-alert fs12 pr5"></i> 0 Domains</span>
+                    <span class="fs11 text-muted" title="Currently deployed on 0 domains"><img style="width: 20px" src="/assets/img/logos/domains_icon_purple.png"/> 0 Domains</span>
                     <!-- <span class="fs11 text-muted ml10" title="Currently in 0 campaigns"><i class="fa fa-circle text-system fs12 pr5"></i> 0 Campaigns</span> -->
                   </div>
                    </a>
@@ -592,9 +592,9 @@
 
 
           if ($span.hasClass("fancytree-domain")) {
-            $span.find("> span.fancytree-icon").html('<i class="fa fa-circle text-alert fs12 pr5"></i>');
+            $span.find("> span.fancytree-icon").html('<img style="width: 20px;" src="/assets/img/logos/domains_icon_purple.png"/>');
           } else {
-            $span.find("> span.fancytree-icon").html('<i class="fa fa-circle text-system fs12 pr5"></i>');
+            $span.find("> span.fancytree-icon").html('<i style="font-size: 18px !important" class="fa fa-crosshairs text-system fs12 pr5"></i>');
           }
 
         }
