--- a/server/index.html
+++ b/server/index.html
@@ -3,7 +3,7 @@
   <head>
   <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
-  <title>Moonlander - </title>
+  <title>Lander | DS</title>
   <meta name="keywords" content="" />
   <meta name="description" content="">
   <meta name="author" content="">
@@ -19,11 +19,14 @@
   <!-- Admin Forms CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
 
- 
-  <!-- Login Overrides -->
-  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
-  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
 
+  <!-- General Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
+  <!-- Login Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
+ <!-- Landers Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/landers_overrides.css">
+ 
  <!-- Fancytree CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/plugins/fancytree/skin-win8/ui.fancytree.min.css">
 
