--- a/server/index.html
+++ b/server/index.html
@@ -13,6 +13,9 @@
   <!-- Font CSS (Via CDN) -->
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
 
+  <!-- Jquery UI CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/jquery/jquery_ui/jquery-ui.min.css">
+
   <!-- Theme CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/theme.css">
 
@@ -21,6 +24,9 @@
 
   <!-- Fancytree CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/plugins/fancytree/skin-win8/ui.fancytree.min.css">
+
+  <!-- Codemirror CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/codemirror/lib/codemirror.css">
 
 
   <!-- General Overrides -->
