--- a/server/index.html
+++ b/server/index.html
@@ -37,7 +37,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/landers_overrides.css">
  
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+  <link rel="shortcut icon" href="/assets/img/logos/landers_icon_black.png">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
