deploy lander to domain modal GUI

--- a/server/index.html
+++ b/server/index.html
@@ -16,6 +16,9 @@
   <!-- Jquery UI CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/jquery/jquery_ui/jquery-ui.min.css">
 
+  <!-- Datatables CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/datatables/media/css/dataTables.bootstrap.min.css">
+
   <!-- Theme CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/theme.css">
 
