file upload gui, server adds lander and job and responds

--- a/server/index.html
+++ b/server/index.html
@@ -31,6 +31,8 @@
   <!-- Codemirror CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/codemirror/lib/codemirror.css">
 
+  <!-- Bootstrap File Input CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/bootstrap-fileinput/css/fileinput.min.css">
 
   <!-- General Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
