--- a/server/index.html
+++ b/server/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
   <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
   <title>Lander | DS</title>
@@ -9,52 +10,43 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="csrf-token" content="{{csrfToken}}">
-
   <!-- Font CSS (Via CDN) -->
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
-
   <!-- Jquery UI CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/jquery/jquery_ui/jquery-ui.min.css">
-
   <!-- Datatables CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/datatables/media/css/dataTables.bootstrap.min.css">
-
   <!-- Theme CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/theme.css">
-
   <!-- Admin Forms CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
-
   <!-- Fancytree CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/plugins/fancytree/skin-win8/ui.fancytree.min.css">
-
   <!-- Codemirror CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/codemirror/lib/codemirror.css">
-
   <!-- Bootstrap File Input CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/bootstrap-fileinput/css/fileinput.min.css">
-
   <!-- General Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
   <!-- Login Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
- <!-- Landers Overrides -->
+  <!-- Landers Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/landers_overrides.css">
- 
+  <!-- Active Snippet Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/active_snippets_overrides.css">
   <!-- Favicon -->
   <link rel="shortcut icon" href="/assets/img/logos/landers_icon_black.png">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
    <![endif]-->
 </head>
-  
-  <body>
-    <div id="root-region"></div>
-    <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.js"></script> 
-    <!-- <script src="./js/vendor/require.js" data-main="js/require_main.built.js"></script>-->
-  </body>
+
+<body>
+  <div id="root-region"></div>
+  <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.js"></script>
+  <!-- <script src="./js/vendor/require.js" data-main="js/require_main.built.js"></script>-->
+</body>
 
 </html>
