active snippets gui update

--- a/server/index.html
+++ b/server/index.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
   <!-- Fancytree CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/plugins/fancytree/skin-win8/ui.fancytree.min.css">
+  <!-- Select2 drop down boxes -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/select2/dist/css/select2.css">
   <!-- Codemirror CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/codemirror/lib/codemirror.css">
   <!-- Bootstrap File Input CSS -->
