updated domains gui, show topbar on loading, close right sidemenu on change page

--- a/server/index.html
+++ b/server/index.html
@@ -34,6 +34,8 @@
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
   <!-- Landers Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/landers_overrides.css">
+  <!-- Domains Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/domains_overrides.css">
   <!-- Active Snippet Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/active_snippets_overrides.css">
   <!-- Favicon -->
