domains sort, search, paging all works

--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
-  <title>Lander | DS</title>
+  <title>Lander DS</title>
   <meta name="keywords" content="" />
   <meta name="description" content="">
   <meta name="author" content="">
