--- a/server/index.html
+++ b/server/index.html
@@ -36,6 +36,8 @@
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/landers_overrides.css">
   <!-- Domains Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/domains_overrides.css">
+  <!-- Campaigns Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/campaigns_overrides.css">
   <!-- Active Snippet Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/active_snippets_overrides.css">
   <!-- Favicon -->
