finished the help vids

--- a/server/index.html
+++ b/server/index.html
@@ -28,6 +28,8 @@
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/codemirror/lib/codemirror.css">
   <!-- Bootstrap File Input CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/bootstrap-fileinput/css/fileinput.min.css">
+  <!-- Fancybox CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/fancybox/source/jquery.fancybox.css">
   <!-- General Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
   
