fixed tpl issue, added err callbacks, fixed undeploy issues

--- a/server/index.html
+++ b/server/index.html
@@ -51,8 +51,8 @@ var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.a
 
 <body>
   <div id="root-region"></div>
-  <!-- <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.js"></script> -->
-   <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.built.js"></script>
+  <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.js"></script>
+   <!-- <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.built.js"></script> -->
 </body>
 
 </html>
