added notes to landers gui

--- a/server/index.html
+++ b/server/index.html
@@ -32,7 +32,8 @@
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/fancybox/source/jquery.fancybox.css">
   <!-- General Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
-  
+  <!-- Summernote CSS  -->
+  <link rel="stylesheet" type="text/css" href="vendor/bower_installed/summernote/dist/summernote.css">
   <!-- Favicon -->
   <link rel="shortcut icon" href="/assets/img/logos/landers_icon_active.png">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
