--- a/server/index.html
+++ b/server/index.html
@@ -18,6 +18,10 @@
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/datatables/media/css/dataTables.bootstrap.min.css">
   <!-- Theme CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/theme.css">
+  
+  <!-- Docs CSS -->
+  <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/docs.css">
+  
   <!-- Admin Forms CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
   <!-- Fancytree CSS -->
