sidebar fixed, resize css fixed

--- a/server/index.html
+++ b/server/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/datatables/media/css/dataTables.bootstrap.min.css">
   <!-- Theme CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/css/default_skin/css/theme.css">
+  <!-- Nano scroller -->
+  <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/nanoscroller/bin/css/nanoscroller.css">
   
   <!-- Docs CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/css/default_skin/css/docs.css">
