intercom button css fix

--- a/server/index.html
+++ b/server/index.html
@@ -36,10 +36,13 @@
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/bootstrap-fileinput/css/fileinput.min.css">
   <!-- Fancybox CSS -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/fancybox/source/jquery.fancybox.css">
-  <!-- General Overrides -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/overrides/overrides.css">
   <!-- Summernote CSS  -->
   <link rel="stylesheet" type="text/css" href="/vendor/bower_installed/summernote/dist/summernote.css">
+   <!-- Intercom CSS -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/overrides/intercom.css">
+ <!-- General Overrides -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/overrides/overrides.css">
+  
   <!-- Favicon -->
   <link rel="shortcut icon" href="/assets/images/logos/landers_icon_active.png">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
